kubernetes/apps/networking/traefik/ingressroutes/media-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
  routes:
    - match: "Host(`plex.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - kind: Service
          name: plex
          namespace: media
          port: 32400
    - match: "Host(`tautulli.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - kind: Service
          name: tautulli
          namespace: media
          port: 8181
    - match: "Host(`jackett.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - kind: Service
          name: jackett
          namespace: media
          port: 9117
    - match: "Host(`sonarr.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - kind: Service
          name: sonarr
          namespace: media
          port: 8989
    - match: "Host(`radarr.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - kind: Service
          name: radarr
          namespace: media
          port: 7878
