kubernetes/apps/networking/traefik/ingressroutes/other-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: other
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
  routes:
    - match: "Host(`longhorn.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          port: 80
      middlewares:
        - name: headers-https
    - match: "Host(`nas.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - kind: Service
          name: nas
          namespace: infra
          port: 443
          serversTransport: nas
    - match: "Host(`octopi.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - kind: Service
          name: octopi
          namespace: infra
          port: 80
